--- a/src/global.css
+++ b/src/global.css
@@ -98,69 +98,73 @@
   --minus900: #174a82;
 }
 
+
+/* font */
 @font-face {
   font-family: "Pretendard";
-  src: url("../asset/font/Pretendard-Thin.otf") format("opentype");
+  src: url("../public/fonts/Pretendard-Thin.otf") format("opentype");
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Pretendard";
-  src: url("../asset/font/Pretendard-ExtraLight.otf") format("opentype");
+  src: url("../public/fonts/Pretendard-ExtraLight.otf") format("opentype");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Pretendard";
-  src: url("../asset/font/Pretendard-Light.otf") format("opentype");
+  src: url("../public/fonts/Pretendard-Light.otf") format("opentype");
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Pretendard";
-  src: url("../asset/font/Pretendard-Regular.otf") format("opentype");
+  src: url("../public/fonts/Pretendard-Regular.otf") format("opentype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Pretendard";
-  src: url("../asset/font/Pretendard-Medium.otf") format("opentype");
+  src: url("../public/fonts/Pretendard-Medium.otf") format("opentype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Pretendard";
-  src: url("../asset/font/Pretendard-SemiBold.otf") format("opentype");
+  src: url("../public/fonts/Pretendard-SemiBold.otf") format("opentype");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Pretendard";
-  src: url("../asset/font/Pretendard-Bold.otf") format("opentype");
+  src: url("../public/fonts/Pretendard-Bold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Pretendard";
-  src: url("../asset/font/Pretendard-ExtraBold.otf") format("opentype");
+  src: url("../public/fonts/Pretendard-ExtraBold.otf") format("opentype");
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Pretendard";
-  src: url("../asset/font/Pretendard-Black.otf") format("opentype");
+  src: url("../public/fonts/Pretendard-Black.otf") format("opentype");
   font-weight: 900;
   font-style: normal;
 }
 
+
+/* reset */
 * {
   margin: 0;
   padding: 0;
@@ -168,6 +172,6 @@
 }
 
 body {
-  /* line-height: 1; 고민*/
   font-family: "Pretendard";
+  line-height: 1;
 }
