--- a/src/global.css
+++ b/src/global.css
@@ -98,7 +98,6 @@
   --minus900: #174a82;
 }
 
-
 /* font */
 @font-face {
   font-family: "Pretendard";
@@ -163,12 +162,27 @@
   font-style: normal;
 }
 
-
 /* reset */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
+.App {
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 body {
